--- a/backend/apps/warehouse/templates/v2/income/income_list.html
+++ b/backend/apps/warehouse/templates/v2/income/income_list.html
@@ -89,7 +89,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 </div>
               </div>
               <br>
-            <form action="{% url 'warehouse_v2:v2-mp-income-create' %}" method="post">
+            <form action="{% url 'warehouse_v2:income-create' %}" method="post">
                 {% csrf_token %}
                 <div class="col-md-1">
                   <button id="myButton" type="button" class="btn btn-block btn-success">
@@ -231,7 +231,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- Page specific script -->
 <script>
 document.getElementById('myButton').addEventListener('click', function() {
-    window.location.href = "{% url 'warehouse_v2:v2-mp-income-create' %}";
+    window.location.href = "{% url 'warehouse_v2:income-create' %}";
 });
 </script>
 <script>
