--- a/backend/apps/warehouse/templates/v2/main_point/mainsreen.html
+++ b/backend/apps/warehouse/templates/v2/main_point/mainsreen.html
@@ -155,7 +155,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <div class="icon">
                     <i class="ion ion-pie-graph"></i>
                   </div>
-                  <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                  <a href="{% url 'warehouse_v2:transfers' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
               </div>
               <!-- ./col -->
