--- a/backend/apps/warehouse/templates/v2/cheque/cheque_list.html
+++ b/backend/apps/warehouse/templates/v2/cheque/cheque_list.html
@@ -26,7 +26,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
     <div class="container">
-      <a href="{% url "warehouse_v2:v2-mainscreen" %}" class="navbar-brand">
+      <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
         <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo" class="brand-image img" style="opacity: .8">
         <span class="brand-text font-weight-light"></span>
       </a>
@@ -40,7 +40,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a href="{% url 'warehouse_v2:v2-mainscreen' %}" class="nav-link">Home</a>
+            <a href="{% url 'warehouse_v2:mainscreen' %}" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Contact</a>
@@ -89,7 +89,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 </div>
               </div>
               <br>
-            <form action="{% url 'warehouse_v2:v2-mainscreen' %}" method="post">
+            <form action="{% url 'warehouse_v2:mainscreen' %}" method="post">
                 {% csrf_token %}
                 <div class="col-md-1">
                   <button id="myButton" type="button" class="btn btn-block btn-success">
@@ -229,7 +229,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <!-- Page specific script -->
 <script>
 document.getElementById('myButton').addEventListener('click', function() {
-    window.location.href = "{% url 'warehouse_v2:v2-mainscreen' %}";
+    window.location.href = "{% url 'warehouse_v2:mainscreen' %}";
 });
 </script>
 <script>
