--- a/backend/apps/warehouse/templates/v2/income/create_income_temp.html
+++ b/backend/apps/warehouse/templates/v2/income/create_income_temp.html
@@ -26,7 +26,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
     <div class="container">
-      <a href="{% url "warehouse_v2:v2-mainscreen" %}" class="navbar-brand">
+      <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
         <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo" class="brand-image img" style="opacity: .8">
         <span class="brand-text font-weight-light"></span>
       </a>
@@ -40,7 +40,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a href="{% url 'warehouse_v2:v2-mainscreen' %}" class="nav-link">Home</a>
+            <a href="{% url 'warehouse_v2:mainscreen' %}" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Contact</a>
@@ -217,7 +217,7 @@ function searchData() {
     table.innerHTML = '<tr><th>Data</th><th>Name</th><th>Price</th><th>Quantity</th></tr>'; // Reset table
 
     // Perform AJAX call to server to get data
-    fetch('{% url 'warehouse_v2:v2-mp-item-search' %}?q=' + encodeURIComponent(input))
+    fetch('{% url 'warehouse_v2:mp-item-search' %}?q=' + encodeURIComponent(input))
         .then(response => response.json())
         .then(data => {
             data.forEach(item => {
