--- a/backend/apps/warehouse/templates/v2/income/income_create_test.html
+++ b/backend/apps/warehouse/templates/v2/income/income_create_test.html
@@ -151,7 +151,7 @@
                 var searchQuery = $(this).val();
                 if (searchQuery.length > 2) {
                     $.ajax({
-                        url: '{% url 'warehouse_v2:v2-mp-item-search' %}',
+                        url: '{% url 'warehouse_v2:mp-item-search' %}',
                         data: {'q': searchQuery},
                         success: function (data) {
                             $('#search-result').empty();
