--- a/backend/apps/warehouse/templates/v2/income/income_create_test_3.html
+++ b/backend/apps/warehouse/templates/v2/income/income_create_test_3.html
@@ -31,7 +31,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
         <div class="container">
-            <a href="{% url "warehouse_v2:v2-mainscreen" %}" class="navbar-brand">
+            <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
                 <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
                      class="brand-image img" style="opacity: .8">
                 <span class="brand-text font-weight-light"></span>
@@ -47,7 +47,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
-                        <a href="{% url 'warehouse_v2:v2-mainscreen' %}" class="nav-link">Главная стр</a>
+                        <a href="{% url 'warehouse_v2:mainscreen' %}" class="nav-link">Главная стр</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -191,7 +191,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                                                 </button>
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <a href="{% url 'warehouse_v2:v2-mp-income-detailed' formss.instance.pk %}"
+                                                                <a href="{% url 'warehouse_v2:mp-income-detailed' formss.instance.pk %}"
                                                                    type="button" class="btn btn-primary">Yes, Delete</a>
                                                                 <button type="button" class="btn btn-secondary"
                                                                         data-dismiss="modal">Close
@@ -284,7 +284,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 var searchQuery = $(this).val();
                 if (searchQuery.length > 2) {
                     $.ajax({
-                        url: '{% url 'warehouse_v2:v2-mp-item-search' %}',
+                        url: '{% url 'warehouse_v2:mp-item-search' %}',
                         data: {'q': searchQuery},
                         success: function (data) {
                             $('#search-result').empty();
