--- a/backend/apps/warehouse/templates/v2/main_point/mainsreen.html
+++ b/backend/apps/warehouse/templates/v2/main_point/mainsreen.html
@@ -24,7 +24,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
     <div class="container">
-      <a href="{% url "warehouse_v2:v2-mainscreen" %}" class="navbar-brand">
+      <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
         <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo" class="brand-image img" style="opacity: .8">
         <span class="brand-text font-weight-light"></span>
       </a>
@@ -40,7 +40,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 {#            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>#}
 {#          </li>#}
           <li class="nav-item">
-            <a href="{% url 'warehouse_v2:v2-mainscreen' %}" class="nav-link">Home</a>
+            <a href="{% url 'warehouse_v2:mainscreen' %}" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Contact</a>
@@ -109,7 +109,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <div class="icon">
                     <i class="ion ion-stats-bars"></i>
                   </div>
-                  <a href="{% url "warehouse_v2:v2-mp-income" %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                  <a href="{% url "warehouse_v2:mp-income" %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
               </div>
               <!-- ./col -->
@@ -139,7 +139,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <div class="icon">
                     <i class="ion ion-pie-graph"></i>
                   </div>
-                  <a href="{% url "warehouse_v2:v2-items-list" %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                  <a href="{% url "warehouse_v2:items-list" %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
               </div>
               <!-- ./col -->
