--- a/backend/apps/warehouse/templates/v2/income/income_create_test_3.html
+++ b/backend/apps/warehouse/templates/v2/income/income_create_test_3.html
@@ -56,6 +56,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
                             <li><a href="#" class="dropdown-item">Some action </a></li>
                             <li><a href="#" class="dropdown-item">Some other action</a></li>
+                            <li></li><button type="button" class="dropdown-item" data-toggle="modal" data-target="#modal-danger">
+                  Log out
+                </button></li>
 
                             <li class="dropdown-divider"></li>
 
@@ -272,7 +275,27 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <strong>Copyright &copy; 2014-2024 <a href="https://hayat.uz">Hayat Medical Centre</a>.</strong> All rights
         reserved.
     </footer>
-
+<div class="modal fade" id="modal-danger" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content bg-danger">
+            <div class="modal-header">
+              <h4 class="modal-title">Log Out</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Ketyapsizmi muncha tez?</p>
+            </div>
+            <div class="modal-footer justify-content-between">
+              <button type="button" class="btn btn-outline-light" data-dismiss="modal">Oтмена</button>
+              <button type="button" class="btn btn-outline-light"><a href="{% url 'warehouse_v2:logout' %}" class="dropdown-item">ВЫХОД</a></button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
