--- a/backend/apps/warehouse/templates/v2/items/items_list.html
+++ b/backend/apps/warehouse/templates/v2/items/items_list.html
@@ -212,6 +212,27 @@
     <!-- AdminLTE App -->
     <script src="{% static 'adminlte3_assets/dist/js/adminlte.min.js' %}"></script>
     <!-- AdminLTE for demo purposes -->
+    <div class="modal fade" id="modal-danger" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content bg-danger">
+            <div class="modal-header">
+              <h4 class="modal-title">Log Out</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Ketyapsizmi muncha tez?</p>
+            </div>
+            <div class="modal-footer justify-content-between">
+              <button type="button" class="btn btn-outline-light" data-dismiss="modal">Oтмена</button>
+              <button type="button" class="btn btn-outline-light"><a href="{% url 'warehouse_v2:logout' %}" class="dropdown-item">ВЫХОД</a></button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
     <!-- jQuery -->
     <!-- DataTables  & Plugins -->
     <script src="{% static "adminlte3_assets/plugins/datatables/jquery.dataTables.min.js" %}"></script>
