--- a/backend/apps/warehouse/templates/v2/items/items_list.html
+++ b/backend/apps/warehouse/templates/v2/items/items_list.html
@@ -75,54 +75,95 @@
                                 <div class="card-header">
                                     <h3 class="card-title">Список лекарств</h3>
                                     <div class="card-tools">
-                                        <div class="input-group input-group-sm" style="width: 150px;">
-                                            <input type="text" name="table_search" class="form-control float-right"
-                                                   placeholder="Search">
+                                        <form method="get" action="">
+                                            <div class="input-group input-group-sm" style="width: 150px;">
+                                                <input type="text" name="table_search" class="form-control float-right"
+                                                       placeholder="Search" value="{{ query }}">
 
-                                            <div class="input-group-append">
-                                                <button type="submit" class="btn btn-default">
-                                                    <i class="fas fa-search"></i>
-                                                </button>
+                                                <div class="input-group-append">
+                                                    <button type="submit" class="btn btn-default">
+                                                        <i class="fas fa-search"></i>
+                                                    </button>
+                                                </div>
                                             </div>
-                                        </div>
+                                        </form>
                                     </div>
                                 </div>
+                                <br>
+                                <form action="{% url 'warehouse_v2:income-create' %}" method="post">
+                                    {% csrf_token %}
+                                    <div class="col-md-1">
+                                        <button id="myButton" type="button" class="btn btn-block btn-success">
+                                            + Добавить
+                                        </button>
+                                    </div>
+                                </form>
+
                                 <!-- /.card-header -->
                                 <div class="card-body">
                                     <table class="table table-bordered">
                                         <thead>
                                         <tr>
                                             <th style="width: 10px">#</th>
-                                            <th>Полное наименование</th>
+                                            <th>Название</th>
+                                            <th>Серия прихода N:</th>
                                             <th>УП</th>
                                             <th>Цена</th>
                                             <th>Остаток</th>
-                                            <th>Серия</th>
+                                            <th>Серия лекарств</th>
                                             <th>Срок год.</th>
                                             <th>MX</th>
-                                            <th style="width: 40px">Label</th>
+                                            <th style="width: 40px">Годен до</th>
                                         </tr>
                                         </thead>
                                         <tbody>
 
                                         {% for i in items %}
                                             <tr>
-                                                <td>1.</td>
+                                                <td>*</td>
                                                 <td>
                                                     <a href="{% url 'warehouse_v2:mainscreen' %}">{{ i.item.name }}</a>
                                                 </td>
-                                                <td>{{ i.item.name }}</td>
-                                                <td>{{ i.item.price }}</td>
                                                 <td>{{ i.income_seria }}</td>
+                                                <td>{{ i.item.unit }}</td>
+                                                <td>{{ i.item.price }}</td>
                                                 <td>{{ i.quantity }}</td>
-                                                <td>{{ i.expire_date }}</td>
-                                                <td>
-                                                    <div class="progress progress-xs">
-                                                        <div class="progress-bar progress-bar-danger"
-                                                             style="width: 55%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="badge bg-danger">55%</span></td>
+                                                <td>{{ i.item.seria }}</td>
+
+                                                {% if i.days_until_expire > 180 %}
+                                                    <td><span class="badge bg-success">{{ i.expire_date }}</span></td>
+                                                    <td>
+                                                        <div class="progress progress-xs">
+                                                            <div class="progress-bar progress-bar-danger"
+                                                                 style="width: {{ i.days_until_expire }}%"></div>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <span class="badge bg-success">{{ i.days_until_expire }} дней</span>
+                                                    </td>
+                                                {% elif i.days_until_expire > 90 %}
+                                                    <td><span class="badge bg-warning">{{ i.expire_date }}</span></td>
+                                                    <td>
+                                                        <div class="progress progress-xs">
+                                                            <div class="progress-bar progress-bar-warning"
+                                                                 style="width: {{ i.days_until_expire }}%"></div>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <span class="badge bg-warning">{{ i.days_until_expire }} дней</span>
+                                                    </td>
+                                                {% else %}
+                                                    <td><span class="badge bg-black">{{ i.expire_date }}</span></td>
+                                                    <td>
+                                                        <div class="progress progress-xs">
+                                                            <div class="progress-bar progress-bar-danger"
+                                                                 style="width: {{ i.days_until_expire }}%"></div>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <span class="badge bg-black">{{ i.days_until_expire }} дней</span>
+                                                    </td>
+                                                {% endif %}
                                             </tr>
                                         {% endfor %}
 
@@ -132,52 +173,42 @@
                                 <!-- /.card-body -->
                                 <div class="card-footer clearfix">
                                     <ul class="pagination pagination-sm m-0 float-right">
-                                        <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                        <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+
+                                        {% if items.has_previous %}
+                                            <li class="page-item">
+                                                <a class="page-link"
+                                                   href="?{% if query %}q={{ query }}&{% endif %}page={{ items.previous_page_number }}">&laquo;</a>
+                                            </li>
+                                        {% endif %}
+
+                                        {% for i in items.paginator.page_range %}
+                                            {% if items.number == i %}
+                                                <li class="page-item active"><a class="page-link">{{ i }}</a></li>
+                                            {% else %}
+                                                <li class="page-item"><a class="page-link"
+                                                                         href="?{% if query %}q={{ query }}&{% endif %}page={{ i }}">{{ i }}</a>
+                                                </li>
+                                            {% endif %}
+                                        {% endfor %}
+
+                                        {% if items.has_next %}
+                                            <li class="page-item">
+                                                <a class="page-link"
+                                                   href="?{% if query %}q={{ query }}&{% endif %}page={{ items.next_page_number }}">Next</a>
+                                            </li>
+                                            <li class="page-item">
+                                                <a class="page-link"
+                                                   href="?{% if query %}q={{ query }}&{% endif %}page={{ items.paginator.num_pages }}">Last
+                                                    &raquo;</a>
+                                            </li>
+                                        {% endif %}
+
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-
-                    {#    <div class="row">#}
-                    {#          <div class="col-12">#}
-                    {#            <div class="card">#}
-                    {#              <div class="card-header">#}
-                    {#                <h3 class="card-title">DataTable with minimal features & hover style</h3>#}
-                    {#              </div>#}
-                    {#              <!-- /.card-header -->#}
-                    {#              <div class="card-body">#}
-                    {#                <table id="example2" class="table table-bordered table-hover">#}
-                    {#                  <thead>#}
-                    {#                    <tr>#}
-                    {#                      <th>Name</th>#}
-                    {#                      <th>Age</th>#}
-                    {#                      <th>Country</th>#}
-                    {#                      <th>Action</th>#}
-                    {#                    </tr>#}
-                    {#                  </thead>#}
-                    {#                  <tbody id="example2-tbody">#}
-                    {#                  </tbody>#}
-                    {#                  <!-- <tfoot>#}
-                    {#                    <tr>#}
-                    {#                      <th colspan="12"><button>Add</button></th>#}
-                    {#                    </tr>#}
-                    {#                  </tfoot> -->#}
-                    {#                </table>#}
-                    {#                <button id="add-item" class="btn btn-primary mt-4">Add</button>#}
-                    {#              </div>#}
-                    {#              <!-- /.card-body -->#}
-                    {#            </div>#}
-                    {#            <!-- /.card -->#}
-                    {##}
-                    {#          </div>#}
-                    {#          <!-- /.col -->#}
-                    {#        </div>#}
                 </div>
 
             </section>
